src/App.css
#root {
    display: grid;
    grid-template-rows: 8rem 1fr;
    grid-template-columns: 0.25fr 1fr;
    --bar-height: 2rem;
    height: 100vh;
    width: 100vw;
    --bar-color: rgb(255, 255, 255);
    overflow: hidden;
    background-color: black;
}
html {
    font-size: max(1vh, 1vw);
}

button:hover {
    cursor: pointer;
}

.bg-video {
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    /* make it fill the viewport */
    width: 100vw;
    height: 100vh;
    /* crop & scale to cover without letterboxing */
    object-fit: cover;
}

/* Nav Bar */

.navBar {
    display: grid;
    grid-template-rows: 100%;
    grid-template-columns: 2fr 3fr 2fr;
    padding-top: 2%;
    justify-items: center;
    align-items: center;
    grid-column: 1 / -1;
    background-color: rgb(163, 163, 163);
    background-color: black;
    color: white;
}

.logo {
    z-index: 2;
    display: flex;
    flex-direction: row;
    width: 100%;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.logo > img {
    width: 5rem;
    height: 5rem;
}

.logoText {
    font-size: 2.5rem;
}

.logo:hover {
    cursor: pointer;
}

.searchbar {
    position: relative;
    width: 100%;
    height: var(--bar-height);
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: var(--bar-color);
    border-radius: 7px;
    z-index: 2;
}

.searchbar > input {
    width: 100%;
    height: 100%;
    border: none;
    background-color: var(--bar-color);
    padding-left: 2%;
    border-radius: 7px;
}

.searchbtn {
    justify-self: flex-end;
}

.searchbar > input:focus {
    border: none;
    outline: none;
}

.searchbtn > img {
    height: var(--bar-height);
    padding: 5%;
}
.searchbtn {
    background-color: none;
    background: none;
    border: none;
}

.searchbtn > img:hover, .searchbtn:hover {
    cursor: pointer;
}

.navButtons {
    z-index: 2;
    position: relative;
    padding: 2%;
    padding-right: 5%;
}

.navButtons > img {
    height: 3rem;
    color: white;
}

.navButtons > img:hover {
    cursor: pointer;
}

.itemCount {
    position: absolute;
    top: 0px;
    right: 5%;
    background-color: rgb(247, 255, 5);
    color: black;
    border-radius: 50%;
    height: 1.5rem;
    width: 1.5rem;
    text-align: center;
    font-size: 1.5rem;
    font-weight: 800;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Side Bar */

.sideBar {
    color: rgb(255, 255, 255);
    background-color: black;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 7%;
    font-size: 1.2rem;
    padding-left: 10%;
}

.sideBar > div:first-child {
    font-size: 2rem;
    font-weight: 800;
    display: none;
}

.option {
    display: flex;
    align-items: center;
    gap: 5%;
}

.option > span {
    font-size: 1.8rem;
}

.option:hover {
    cursor: pointer;
}

.option.active {
    color: rgb(0, 255, 247);
}

.option > img {
    display: inline;
    height: 1.5rem;
}


/* Main Search */

.searchResults {
    background-color: rgb(0, 0, 0);
    display: grid;
    gap: 5%;
    grid-template-columns: repeat(auto-fit, minmax(20vw, 1fr));
    padding-top: 2%;
    padding-left: 2%;
    padding-bottom: 2%;
    overflow: auto;
}

.searchResults::-webkit-scrollbar     { width: 0.4vw; }
.searchResults::-webkit-scrollbar-track   { background: #000000; }
.searchResults::-webkit-scrollbar-thumb   { background: #888; border-radius: 6px; }
.searchResults::-webkit-scrollbar-thumb:hover { background: #555; }

.card {
    height: 43rem;
    width: 90%;
    background-color: rgb(39, 39, 39);
    overflow: auto;
    scrollbar-width: none;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 27rem 5rem 3rem 8rem;
    border-radius: 7px;
}

.card > img {
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.cardActions {
    display: flex;
    align-items: center;
    padding-left: 5%;
    padding-right: 5%;
    border-top: 0.25vh solid white;
}

.cardPrice {
    margin-left: auto;
    color: white;
    font-size: 1.2rem;
    font-weight: 600;
}

.cardAdd, .cardAdded {
    font-size: 1.2rem;
    width: 50%;
    text-align: start;
}

.cardAdd {
    border: none;
    background-color: none;
    background: none;
    color: rgb(0, 183, 255);
    padding: 0;
}

.cardAdd::after {
    content: " ✚ "
}

.cardAdded {
    color: rgb(13, 255, 0);
}

.cardAdded::after {
    content: " ✅";
}

.cardPrice::before {
    content: "$";
}

.cardName {
    font-size: 1.5rem;
    color: white;
    font-weight: 800;
    text-align: center;
    padding: 5%;
    padding-top: 0px;
}

.cardActions > button:hover {
    cursor: pointer;
}

.cardSteamStats {
    color: white;
    display: flex;
    padding-left: 5%;
    padding-right: 5%;
    font-size: 1.2rem;
}

.cardRatings {
    margin-left: auto;
}

.cardRating.great {
    color: rgb(0, 255, 0);
}

.cardRating.good {
    color: rgb(153, 255, 0);
}

.cardRating.mid {
    color: yellow;
}

.cardRating.bad {
    color: orange;
}

.cardRating.horrible {
    color: red;
}

span.ratingLabel, .cardRatings {
    color: rgb(201, 201, 201);
}



/* Cart Opening */
.cartOverlay {
  z-index: 2;
  position: fixed;
  top: 0; 
  right: 0;
  width: 100vw; 
  height: 100vh;
  background: rgba(0,0,0,0.4);
  display: flex;
  /* pushes the sidebar to the left */
  justify-content: flex-end;
  align-items: stretch;
}

.cart-modal {
  position: relative;
  width: 20vw;
  background: #949494;
  box-shadow: 2px 0 6px rgba(0,0,0,0.2);
  height: 100vh;
}
.cart-modal ul {
  list-style: none;
  padding: 0;
  overflow-y: auto;
  height: 87%;
  scrollbar-width: none;
  width: 100%;
  align-self: center;
  text-align: center;
  padding-left: 10%;
}

.fullCart {
    height: 90%;
    display: flex;
    flex-direction: column;
}

.cartTitle {
    font-size: 2.2rem;
    margin-bottom: 2%;
    margin-left: 4%;
    margin-top: 2%;
}
/* ... */

